Corrects the bug of too much padding on the donate button

--- a/main/css/style.css
+++ b/main/css/style.css
@@ -872,7 +872,6 @@ ul.menu.mini li:hover a, ul.menu.mini li.active a {
 .slide-content .big-text{font-size:30px;font-family:'Roboto';font-weight:700;padding:15px 0 15px;display:inline-block;}
 
 .styled-select {
-	margin-top: 300px;
    background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
    height: 29px;
    overflow: hidden;
